css/dark-mode-GENERATED.css
/* ... */
/*  Exclusion for TOC entries.
 */
.TOC ul > li::before {
    filter: none;
}

/*  For sortable table column headings, we use dark versions of the up/down/both
    arrow icons.
 */
table th.tablesorter-header {
    background-image: url('/static/img/tablesorter/tablesorter-bg-dark.gif');
}
table th.tablesorter-headerAsc {
    background-image: url('/static/img/tablesorter/tablesorter-asc-dark.gif');
}
table th.tablesorter-headerDesc {
    background-image: url('/static/img/tablesorter/tablesorter-desc-dark.gif');
}

/*  Images that are marked as '.invert' by the server are inverted,
    hue-rotated, and desaturated. Other (non-invertible) images are merely
    desaturated. Hovering over an image restores it to its original state.
    Hierarchy: ‘.invert-not’: no inversion or grayscale;
    ‘.invert’/‘.invert-auto’: inverted (uninverted upon mouse hover);
    none: grayscaled (ungrayscaled on hover).
 */
img.invert,
img.invert-auto {
    filter: grayscale(50%) invert(100%) brightness(95%) hue-rotate(180deg);
}
img:not(.invert):not(.invert-auto) {
    filter: grayscale(50%);
}
img,
img.invert,
img.invert-auto {
    transition: filter 0.25s ease;
}
img:not(.drop-filter-on-hover-not):hover,
img:not(.drop-filter-on-hover-not).invert:hover,
img:not(.drop-filter-on-hover-not).invert-auto:hover,
img:not(.drop-filter-on-hover-not):not(.invert):not(.invert-auto):hover {
    filter: none;
    transition: filter 0s ease 0.25s;
}

img[src$=".svg"].invert,
img[src$=".svg"].invert-auto {
    background-color: transparent;
}
img[src$=".svg"].invert:hover,
img[src$=".svg"].invert-auto:hover {
    filter: grayscale(50%) invert(100%) brightness(95%) hue-rotate(180deg);
}

/*  Image alt-text.
 */
img.invert::before,
img.invert-auto::before {
    filter: invert(1);
}
img.invert:hover::before,
img.invert-auto:hover::before {
    filter: none;
}
/*  Styling the image alt-text interferes with the transitions in dark mode.
    (We include non-class’d `img` in this selector for consistency.)

    TEMPORARY until we transition to a color-based instead of filter-based
    scheme for this. —SA 2022-07-29
 */
img,
img:hover,
img.invert,
img.invert:hover,
img.invert-auto,
img.invert-auto:hover {
    transition: none;
}

/*  For images which have been manually marked up with ‘.invert-not’, we
    avoid any filtering at all. If they are manually marked up (artwork,
    diagrams with multiple subtly-different colors matched to a legend/caption),
    the color is important and shouldn’t be faded out by default.
 */
#markdownBody img.invert-not {
    filter: none;
}

/*  The loading spinner for object popups (image, iframe, object) is inverted
    and made more visible in dark mode.
 */
.popframe.loading::before {
    filter: invert(1);
    opacity: 0.4;
}

/*  “Loading failed” messages for object popups.
 */
.popframe.loading-failed::after {
    opacity: 0.4;
}

/*  Include-link loading spinner.
 */
a.include-loading.include-spinner::after {
    filter: invert(1);
}

/*  Masked links key toggle info alert panel.
 */
div#masked-links-key-toggle-info-alert img {
    filter: drop-shadow(0 0 3px var(--GW-reader-mode-masked-links-key-toggle-info-alert-panel-text-shadow-color));
}

/*  All SVG linkicons have to be inverted.
 */
a[data-link-icon-type*='svg'] .link-icon-hook::after {
    filter: invert(1);
}

/*  Manual link-icon SVGs: Recently-modified, manicule/index, theme-toggle icons
 */
.has-recently-modified-icon .recently-modified-icon-hook::before,
.icon-single-white-star-on-black-circle::before,
.manicule, .icon-manicule-right, .icon-manicule-left,
.icon-moon-solid, .icon-book-open-solid, .icon-message-slash-solid,
.icon-magnifying-glass, .icon-gear-solid, .icon-sun-solid, .icon-eye-slash-solid {
    filter: invert(1);
}

/*  Math in Wikipedia pop-frames.
 */
.wikipedia-entry .wikipedia-math-block-wrapper img,
.wikipedia-entry .wikipedia-math-inline-wrapper img {
    filter: invert(1);
    background-color: var(--GW-wikipedia-math-image-background-color);
}

/*  Images in figures in Wikipedia pop-frames.
 */
.wikipedia-entry figure img {
    background-color: var(--GW-wikipedia-image-background-color);
}

